# cheeto

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Partition Auditing.ipynb  Prototyping.ipynb  README.md  docker-entrypoint.sh  environment.yaml  generate-hippoapi.sh  pyproject.toml  pytest.ini  release.sh
.claude/rules/: iam.md  sh.md  slurm.md
.cursor/rules/: database.mdc  sh.mdc  slurm.mdc
.github/workflows/: docker-publish.yaml  test.yaml
cheeto/: __init__.py  __main__.py  _yaml.py  args.py  config.py  constants.py  database.py  db.py  encrypt.py  errors.py  git.py  git_async.py  hippo.py  iam.py  iam_async.py  ldap.py  ldap_async.py  log.py  mail.py  monitor.py  nocloud.py  parsing.py  puppet.py  slurm.py  slurm_sync.py  templating.py  types.py  utils.py  xdg_base_dirs.py  yaml.py
cheeto/.openapi-generator/: FILES
cheeto/cmds/: __init__.py  __main__.py  config.py  daemon.py  database.py  hippo.py  iam.py  ipython.py  monitor.py  nocloud.py  puppet.py  slurm.py
cheeto/cmds/ng/: __init__.py  _args.py  _slurm_show.py  group.py  hippo.py  history.py  iam.py  ldap.py  migrate.py  site.py  slurm.py  storage.py  user.py  user_site.py
cheeto/daemon/: __init__.py  api.py  app.py  schedule.py  tasks.py
cheeto/database/: __init__.py  base.py  crud.py  fields.py  group.py  hippo.py  ldap.py  site.py  slurm.py  storage.py  user.py
cheeto/hippoapi/: __init__.py
cheeto/hippoapi/.openapi-generator/: FILES
cheeto/hippoapi/models/: __init__.py  chart_string_validation_model.py  email_model.py  financial_chart_string_type.py  gl_segments.py  key_value_pair_of_string_and_string.py  ppm_segments.py  queued_event_account_model.py  queued_event_data_model.py  queued_event_data_model_metadata.py  queued_event_group_model.py  queued_event_model.py  queued_event_update_model.py  simple_notification_model.py
cheeto/iamapi/models/: __init__.py  directory_load_cursor.py  directory_load_return_object.py  directory_response_object.py  directory_result.py  directory_search_return_object.py  email_and_kerberos.py  identity_store_base_result.py  identity_store_response_object.py  identity_store_search_return_object.py  major_code.py  major_code_list.py  pidm_info.py
cheeto/legacy/: __init__.py  migrate.py
cheeto/legacy/database/: __init__.py  base.py  fields.py  group.py  hippo.py  slurm.py  storage.py  user.py
cheeto/models/: __init__.py  base.py  group.py  group_membership.py  hippo.py  history.py  ldap_sync.py  site.py  site_association.py  slurm.py  storage.py  user.py  user_site_info.py
cheeto/operations/: __init__.py  base.py  email.py  group.py  group_membership.py  hippo.py  iam.py  ldap.py  migrate.py  puppet.py  site.py  slurm.py  storage.py  user.py  user_site.py
cheeto/queries/: __init__.py  access_status.py  group.py  history.py  puppet_legacy.py  site.py  slurm.py  storage.py  user.py
cheeto/templates/: banner.txt  user-data.yaml.j2
cheeto/templates/emails/: account-deactivated.txt.j2  account-ready.txt.j2  account-restored.txt.j2  ci-error.txt.j2  key-updated.txt.j2  new-membership.txt.j2  new-sponsor.txt.j2  offboarding-warning.txt.j2  removed-from-group.txt.j2  sync-error.txt.j2
cheeto/templates/layouts/: raid1_all_root.yaml  raid1_all_root_largest.yaml  raid1_largest.yaml  raid1_largest_scratch.yaml  raid1_root_largest_scratch.yaml  single_disk.yaml  single_disk_all_root.yaml
cheeto/templates/mongodb/: bootstrap.yaml
cheeto/tests/: conftest.py  test_beanie.py  test_cli_yaml.py  test_daemon.py  test_db.py  test_git.py  test_git_async.py  test_hippo.py  test_hippo_client.py  test_iam_sync.py  test_ldap.py  test_ldap_async.py  test_ldap_mapping.py  test_mail.py  test_puppet.py  test_slurm.py  test_slurm_sync.py  test_yaml.py
cheeto/tests/data/: config.yaml  hippo.encoding.yaml  server_entries.json  server_info.json  server_schema.json  test-forest-1.site.yaml  test-forest-2.site.yaml  testgroup.yaml  testuser.bad-shell.yaml  testuser.bad-uid.yaml  testuser.no-email.yaml  testuser.oob-uid.yaml  testuser.site.bad-override-value.yaml  testuser.yaml  (+4 more)
docs/: conf.py  index.md  porting-status-2026-04-22.md  porting-status-2026-05-14.md
docs/architecture/: index.md
docs/reference/: index.md
docs/user-guide/: index.md
notebooks/: Partition Auditing.ipynb  Prototyping.ipynb
scripts/: create-test-cluster-ng.sh  create-test-cluster.sh  do-v2-migrate.sh
tests/: conftest.py
tests/test-data/: franklin.assocs.txt  franklin.qoses.txt  testuser.txt  testuser.yaml
(+81 files in other folders)
