[tool.poetry]
name = "cheeto"
version = "2.0.4"
description = "Utilities for the UC Davis HPC Core Facility."
license = "Proprietary"
authors = [
	"Camille Scott <cswel@ucdavis.edu>"
]
readme = "README.md"
repository = "https://github.com/ucdavis/cheeto"
include = [
	{ path = "cheeto/templates" }
]
packages = [
    { include = "cheeto" }
]

[tool.poetry.scripts]
cheeto = "cheeto.cmds.__main__:main"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[tool.poetry.requires-plugins]
poetry-bumpversion = "^0.3.3"

[tool.poetry_bumpversion.file."cheeto/__init__.py"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
rich = "^13.9.2"
ruamel-yaml = "^0.17.21"
marshmallow-dataclass = {extras = ["union"], version = "^8.7.1"}
mergedeep = "^1.3.4"
jinja2 = "^3.1.6"
sh = "^2.0.7"
pytest = ">=7.4.4,<10"
pytest-asyncio = "^1.3.0"
filelock = "^3.20.3"
python-ldap = "^3.4.4"
gssapi = "^1.9.0"
pymongo = "^4.10.1"
# v1 (mongoengine) support is optional — installed via the `legacy` extra,
# needed only for the v1 -> v2 migration (cheeto/legacy/, `cheeto ng migrate`).
mongoengine = {git = "https://github.com/MongoEngine/mongoengine", rev = "4d3ab60", optional = true}
blinker = {version = "^1.8.2", optional = true}   # mongoengine signals
attrs = "^24.2.0"
httpx = "^0.27.0"
python-dateutil = "^2.9.0.post0"
pyescrypt = "^0.1.0"
xkcdpass = "^1.19.9"
ponderosa = "^0.6.0"
marko = "^2.1.2"
ipython = "^8.26.0"
beanie = "^2.0.1"
nest-asyncio = "^1.6.0"
bonsai = "^1.5.0"
celery = {version = "^5.6", extras = ["mongodb"]}
fastapi = "^0.115"
uvicorn = "^0.34"

[tool.poetry.extras]
# v1 mongoengine support, for running the v1 -> v2 migration only.
legacy = ["mongoengine", "blinker"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
